# easy-pdf-to-text

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
easy_pdf_to_text/: __init__.py  core.py
tests/: test_easy_pdf_to_text.py
